Fix heap snapshot rename UX
This change fixes three problems:
- When the snapshot is renamed to empty string, there is no way
  to turn on edit mode anymore. To fix this, we cancel the edit
  if the new name is the empty string.
- Because both the .title and the .title-container classes are
  set to overflow:hidden and text-overflow:ellipsis, we observe
  the issue in issue 383014858. To fix this, we only apply
  text-overflow:ellipsis when not editing. We also apply
  display:flex to auto-adjust the size of the .title span to avoid
  an overlap with the .subtitle span when editing
- We add a small padding-left so that the .title span does not get
  slightly truncated from the left in some situations after an
  edit that changes the snapshot to a longer name is committed.

Fixed: 383014858
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6088098
Auto-Submit: Yang Guo <yangguo@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/front_end/panels/profiler/profilesSidebarTree.css
+++ b/front_end/panels/profiler/profilesSidebarTree.css
@@ -184,8 +184,18 @@ li .titles {
 
 li .titles > .title-container {
   z-index: 1;
-  text-overflow: ellipsis;
   overflow: hidden;
+}
+
+li .titles > .title-container:has(:not(.editing)) {
+  text-overflow: ellipsis;
+}
+
+li .titles > .title-container .title.editing {
+  display: flex;
+  overflow: hidden;
+  margin-inline: 0;
+  padding-inline: 0;
 }
 
 li.small .titles {
